--- a/index.html
+++ b/index.html
@@ -42,70 +42,70 @@
                 <input type="text" placeholder="Search...." id="search_input">
             
                 <div class="search">
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                      <img src="img/theboys2.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/citadel2.jpg" alt="">
                         <div class="cont">
                             <h3>Citadel</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 7.6</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/bhediya12.jpg" alt="">
                         <div class="cont">
                             <h3>Bhediya</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 7</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/collegeromance2.jpg" alt="">
                         <div class="cont">
                             <h3>College Romance</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 6.1</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/7777.jpg" alt="">
                         <div class="cont">
                             <h3>777 Charlie</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 8.4</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/apharan2.jpg" alt="">
                         <div class="cont">
                             <h3>Apharan</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.8</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/asur22.jpg" alt="">
                         <div class="cont">
                             <h3>Asur-2</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.5</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/farzi2.jpg" alt="">
                         <div class="cont">
                             <h3>Farzi</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 8.4</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/moneyheist2.jpg" alt="">
                         <div class="cont">
                             <h3>moneyheist2</h3>
                             <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 8.2</p>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="comment.html" class="card">
                         <img src="img/peaky-blinders-.jpg" alt="">
                         <div class="cont">
                             <h3>Peaky Bliders/h3>
