--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" placeholder="Search...." id="search_input">
             
                 <div class="search">
-                    <a href="https://farhan41297.github.io/Movie-Media/comment.html" class="card">
+                    <a onclick="window.location='comment.html';"  class="card">
                      <img src="img/theboys2.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
