--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" placeholder="Search...." id="search_input">
             
                 <div class="search">
-                    <a onclick="window.location='comment.html';"  class="card">
+                    <a href="#" class="card">
                      <img src="img/theboys2.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
@@ -196,7 +196,7 @@
                 <i class="bi bi-chevron-left"></i>
                 <i class="bi bi-chevron-right"></i>
                     <div class="cards">
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/THEBOYS.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/theboys1.jpg" alt="">
@@ -370,5 +370,10 @@
             </div>-->
     </div>
     <script src="app.js"></script>
+    <script>
+        function comment(){
+            window.location.href = "comment.html";
+        }
+    </script>
 </body>
 </html>
