--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/Tu-Jhoothi-Main-Makkar-Title.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/tu-jhoothi-main-makkaar1.avif" alt="">
@@ -222,7 +222,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/citadel.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/citadel1.jpg" alt="">
@@ -235,7 +235,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/adipurush.webp" alt="">
                             <div class="rest-card">
                                 <img src="img/adipurush1.jpg" alt="">
@@ -248,7 +248,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/Farzi.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/farzi1.png" alt="">
@@ -261,7 +261,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/the-devil.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/the-devil1.jpg" alt="">
@@ -274,7 +274,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/777.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/777_1.jpg" alt="">
@@ -287,7 +287,7 @@
                             </div>
                             </div>
                         </div>
-                        <div class="movie-list-item">
+                        <div class="movie-list-item" onclick="comment()">
                             <img class="movie-list-item-img" src="img/bhediya.jpg" alt="">
                             <div class="rest-card">
                                 <img src="img/bhediya2.jpg" alt="">
